# gitops-lab

./: .gitignore  .sourceignore  CLAUDE.md  README.md
.claude/: settings.local.json
.claude/commands/: argocd-audit.md  helm-charts-audit.md  terraform-audit.md
.github/workflows/: arc-runner-demo.yml  arc-runner-wsl-demo.yml  ba-tests.yml  find-latest-deployment-tag.yml  harbor-image-test-publish.yml  harbor-sample-ai-backend-publish-image.yml  harbor-sample-ai-backend-publish.yml  harbor-sample-ai-frontend-publish-2.yml  harbor-sample-ai-frontend-publish.yml  harbor-sample-ai-inference-api-publish.yml  my-sample-app-1-001-PR-check.yml  mySampleApp1-001-build.yml  mySampleApp1-002-UnitTests.yml  mySampleApp1-BA-tests.yml  mySampleApp1-BATests.yml  mySampleApp1-FitnessTests.yml  mySampleApp1-IntegrationTests.yml  mySampleApp1-PRPolicy.yml  mySampleApp1-PublishImage.yml  (+14 more)
apps/sample-ai/inference-api/: .dockerignore  .env.development  .gitignore  Dockerfile  app.py  check.py  environment.yml  inference.py  pyproject.toml  requirements.txt  upload.py
docs/: 000-intro.md  001-k8s.md  002-minikube.md  003-terraform.md  004-helm.md  005-argocd.md  005-flux.md  006-setup-local.md  007-setup-digital-ocean.md  008-setup-azure.md  009-dapr.md  010-bdd.md  BITNAMI_MIGRATION.md  VERSION_MANAGEMENT.md  cicd-argo-workflow.puml  db-migration-flow.puml  mcp.puml
host/: create-network.sh
manifests/: project-001-appset.yaml
reverse-proxy/: Dockerfile  docker-compose.yaml  index.html  nginx.conf
scripts/: start-minikube.sh  stop-minikube.sh  test-connections.sh
(+1125 files in other folders)
